--- a/ChatGPT/app/src/main/AndroidManifest.xml
+++ b/ChatGPT/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.ChatGPT"
         tools:targetApi="31">
         <activity
-            android:name=".ChatActivity"
+            android:name=".presentation.AnswersActivity"
             android:exported="true"
             >
 
@@ -27,7 +27,7 @@
         </activity>
 
         <activity
-            android:name=".MainActivity"
+            android:name=".presentation.QuestionsActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
