--- a/ToDoApp/app/build.gradle
+++ b/ToDoApp/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
 
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.6.1")
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
     implementation 'androidx.activity:activity-ktx:1.7.2'
     implementation 'androidx.core:core-ktx:1.8.0'
